Configurando o Crud das estantes